Fixed scrolling issue on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body {
     height: 100%;
     background-image:url('../images/bg.jpg'); /* Photo by Artem Sapegin on Unsplash*/
     background-repeat: repeat;
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-size: cover;
 }
 
